2007-06-11  Philip Van Hoof  <pvanhoof@gnome.org>

	* The summary camel-lite code no longer puts the uid field in the mmap
	* Several race conditions fixed with the IDLE support
	* The IDLE support is no longer happening in a GMainLoop, but now in a
	thread. This so that the ui of applications on top of Tinymail wont
	hang with very high latency networks like GPRS

2007-06-08  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c: Add the tree
	model as an observer of the root folder stores

2007-06-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* tny_folder_poke_status fixes
	* Unread and total count fixes
	* Total and ~unread even when the folder was never refreshed
	* Support for the Content-Disposition header in mime parts
	* Some bugfixes in the SMTP support
	* Bugfix in the TnyFolderMonitor

2007-06-08  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-msg-header.c: added support to set
	priority flags through set_flags/unset_flags. The flags are
	properly converted to X-Priority and X-MSMail-Priority headers.

2007-06-07  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel: Fixed a problem when deleting folders that were
	just under an store account.
	* libtibymailui-gtk/tny-gtk-folder-store-tree-model.c: fixed a problem
	when notifying the observers when a folder was added just under an
	account

2007-06-07  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged camel-lite with upstream Camel revision 7777
	* Various connection cancellation problems fixed in the IMAP code
	* Fix for trac ticket #64
	* Fix for sergio, when removing folders the CamelFolderInfo iter was
	still cached
	* tny_folder_poke_status will now, for IMAP, do a STATUS command to
	more accurately find out the UNSEEN and MESSAGES statuses

2007-06-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed the OpenSSL support, although I'm leaving the warnings in
	place as the support for OpenSSL has not had as much testing as the